# LICENSE

cmake_minimum_required(VERSION 3.13 FATAL_ERROR)

project(odpic_demos VERSION 0.1)

add_custom_target(odpic_demos)

add_library(odpic_demo_common OBJECT)
  target_link_libraries(odpic_demo_common PRIVATE odpic)
  target_compile_definitions(odpic_demo_common PRIVATE _CRT_SECURE_NO_WARNINGS)
  target_sources(odpic_demo_common PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SampleLib.c)
  target_sources(odpic_demo_common PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SampleLib.h)

function(add_odpi_demo name)
  add_executable(${name})
  add_dependencies(odpic_demos ${name})
  target_sources(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Demo${name}.c)
  target_compile_definitions(${name}  PRIVATE _CRT_SECURE_NO_WARNINGS)
  target_link_libraries(${name} PRIVATE odpic)
  target_link_libraries(${name} PRIVATE odpic_demo_common)
endfunction()

add_odpi_demo(AppContext)
add_odpi_demo(BFILE)
add_odpi_demo(BindArrays)
add_odpi_demo(BindJSON)
add_odpi_demo(BindObjects)
add_odpi_demo(BLOB)
add_odpi_demo(BLOBsAsBytes)
add_odpi_demo(BulkAQ)
add_odpi_demo(CallProc)
add_odpi_demo(CLOB)
add_odpi_demo(CLOBsAsStrings)
add_odpi_demo(ConvertNumbers)
add_odpi_demo(CQN)
add_odpi_demo(CreateSodaColl)
add_odpi_demo(DistribTrans)
add_odpi_demo(DMLReturning)
add_odpi_demo(DropSodaColl)
add_odpi_demo(Fetch)
add_odpi_demo(FetchDates)
add_odpi_demo(FetchJSON)
add_odpi_demo(FetchObjects)
add_odpi_demo(GetAllSodaDocs)
add_odpi_demo(GetSodaCollNames)
add_odpi_demo(GetSodaDoc)
add_odpi_demo(ImplicitResults)
add_odpi_demo(InOutTempLobs)
add_odpi_demo(Insert)
add_odpi_demo(InsertAsArray)
add_odpi_demo(InsertManySodaColl)
add_odpi_demo(InsertSodaColl)
add_odpi_demo(IterSodaColls)
add_odpi_demo(LongRaws)
add_odpi_demo(Longs)
add_odpi_demo(ObjectAQ)
add_odpi_demo(RawAQ)
add_odpi_demo(RefCursors)
add_odpi_demo(RemoveSodaDoc)
add_odpi_demo(ReplaceSodaDoc)
add_odpi_demo(ShardingNumberKey)
add_odpi_demo(TokenPoolWithCallback)
add_odpi_demo(TokenStandalone)