# LICENSE

cmake_minimum_required(VERSION 3.13 FATAL_ERROR)

project(odpic_test VERSION 0.1)

add_library(odpic_test_common OBJECT)
  target_link_libraries(odpic_test_common PRIVATE odpic)
  target_compile_definitions(odpic_test_common PRIVATE _CRT_SECURE_NO_WARNINGS)
  target_sources(odpic_test_common PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/TestLib.c)
  target_sources(odpic_test_common PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/TestLib.h)

function(add_odpi_test name)
  add_executable(${name})
  target_sources(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/test_${name}.c)
  target_link_libraries(${name} PRIVATE odpic)
  target_link_libraries(${name} PRIVATE odpic_test_common)
  add_test(test_${name} ${name})
endfunction()

add_odpi_test(1000_context)
add_odpi_test(1100_numbers)
add_odpi_test(1200_conn)
add_odpi_test(1300_conn_properties)
add_odpi_test(1400_pool)
add_odpi_test(1500_pool_properties)
add_odpi_test(1600_queries)
add_odpi_test(1700_transactions)
add_odpi_test(1800_misc)
add_odpi_test(1900_variables)
add_odpi_test(2000_statements)
add_odpi_test(2100_data_types)
add_odpi_test(2200_object_types)
add_odpi_test(2300_objects)
add_odpi_test(2400_enq_options)
add_odpi_test(2500_deq_options)
add_odpi_test(2600_msg_props)
add_odpi_test(2700_aq)
add_odpi_test(2800_lobs)
add_odpi_test(2900_implicit_results)
add_odpi_test(3000_scroll_cursors)
add_odpi_test(3100_subscriptions)
add_odpi_test(3200_batch_errors)
add_odpi_test(3300_dml_returning)
add_odpi_test(3400_soda_db)
add_odpi_test(3500_soda_coll)
add_odpi_test(3600_soda_coll_cursor)
add_odpi_test(3700_soda_doc)
add_odpi_test(3800_soda_doc_cursor)
add_odpi_test(3900_sess_tags)
add_odpi_test(4000_queue)
add_odpi_test(4100_binds)
add_odpi_test(4200_rowids)
add_odpi_test(4300_json)